--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,13 @@ spring:
   sql:
     init:
       mode: always
+  main:
+    allow-bean-definition-overriding: true
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 jwt:
   secret:
     access: pmAwd5izmqEULionmIAPrA==
