--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,11 @@ spring:
           auth: true
           starttls:
             enable: true
+
 jwt:
   secret:
     access: pmAwd5izmqEULionmIAPrA==
     refresh: lKwppuqF4a+agwP0TIUo
+logging:
+  level:
+    org.apache.catalina.core.ContainerBase: off
